--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -15,13 +15,8 @@
 }
 
 .heroDetails {
-  position: absolute;
-  background: rgba(0, 0, 0, 0.7);
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 0);
   font-size: 14px;
-  padding: 0 0.5em;
+  padding: 2.5em;
 }
 
 @media(min-width: 600px) {
